# herring-6502

./: .gitignore  .gitmodules  NOTES.md  README.md
arduino/bus_mon/: bus_mon.h  bus_mon.ino  cpu_6502.cpp  cpu_6502.h
arduino/clock_control/: clock_control.ino
arduino/clock_emulator/: clock_emulator.ino
arduino/emulated_gfx_chip/: emulated_gfx_chip.ino
arduino/emulated_uart/: emulated_uart.ino
arduino/herring_monitor/: herring_monitor.ino
arduino/include/: herring_pins.h
arduino/keyboard_controller/: keyboard_controller.ino
arduino/led_matrix_interface/: led_matrix_interface.ino
arduino/sd_interface/: sd_interface.ino
asm/: lcd_test.s  led_array.s  loop.s  ram_test.s  uart_test.s  via_test.s
firmware/: Makefile  acia.asm  acia.c  acia.h  basic.c  basic.h  build.sh  crt0.asm  flash.sh  game.s  herring.cfg  herring.h  herring.lib  herring.s  interpreter.c  lcd.s  lcd_demo.s  monitor.c  ram_demo.s  rebuild_lib.sh  rom_demo.s  spi.asm  spi_impl.c  startup.asm  uart_demo.s  utils.c  via.asm  via.c  via.h  zeropage.asm
firmware/assembler_x86/: assembler_test.asm  build.sh
firmware/basic/: basic.c  basic.h  main.c
firmware/board_b/: board_b.cfg  board_b.lib  build.sh  clean.sh  crt0.asm  main.c  remake_lib.sh  via.asm
firmware/config/: crt0_loader.asm  crt0_program.asm  crt0_ram.asm  crt0_rom.asm  loader.cfg  loader.lib  program.cfg  program.lib  ram.cfg  ram.lib  rom.cfg  rom.lib  zero.cfg
firmware/cross_assembler/: assembler_test.asm  build.sh  (+2 more)
pico/memulator/: CMakeLists.txt  build.sh  main.c
tools/: build_and_flash.sh  serial_loader.sh
(+240 files in other folders)
